@@ -4,3 +4,4 @@ https@
 sslcat
 sslconnect
 sslprint
+ucspissltest
