@@ -4,3 +4,4 @@ sslconnect
 sslclient
 sslserver
 sslprint
+ucspissltest
